--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - deploy  # Cambia 'main' por la rama que uses, como 'master' si es necesario
+      - develop  # Cambia 'main' por la rama que uses, como 'master' si es necesario
 
 jobs:
   build:
