--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,17 +15,19 @@ jobs:
       with:
         ref: develop
 
-    - name: Fetch all history for all tags and branches
-      run: git fetch --prune --unshallow
+    - name: Print Git configuration
+      run: |
+        git config --list
+        git remote -v
 
-    - name: List all branches
+    - name: Check Git branches
       run: git branch -a
 
-    - name: Show latest commits
+    - name: Check Git log
       run: git log -n 5
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./
